--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -51,7 +51,8 @@
     font-size: 1rem;
     color: #9ca3af;
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 600;
+    letter-spacing: 1.2;
     margin: 1rem 0;
   }
 }
@@ -62,8 +63,12 @@
   padding: 0.75rem 0 0.75rem 0.75rem;
   border-radius: 0.75rem;
   span {
+    text-align: center;
     font-weight: 500;
     text-transform: capitalize;
     margin-left: 0.75rem;
+    font-size: calc(1rem - 1px);
+    padding-top: 4px;
+    line-height: 1.25rem;
   }
 }
