feat: Wrapped up the location logic for the select posts in theme page

--- a/src/components/Dialog/SelectThemePosts.scss
+++ b/src/components/Dialog/SelectThemePosts.scss
@@ -56,3 +56,9 @@
 .dropdown-content__item:hover {
   background-color: #fcfcfc;
 }
+
+.select-container__item {
+  background-color: red;
+  padding-block: 16.5px;
+  padding-left: 14px;
+}
