--- a/src/components/Dialog/SelectThemePosts.scss
+++ b/src/components/Dialog/SelectThemePosts.scss
@@ -13,8 +13,9 @@
     border: 1px solid #fcfcfc;
     border-radius: 12px;
     padding-block: 4px;
-    padding-inline: 1rem;
-    background-color: #eee;
+    padding: 1rem;
+    // background-color: #eee;
+    background-color: #FFFFFF;
   }
   
   &__button {
