feat: added the whole logic and UI for the search by location

--- a/src/components/Dialog/SelectThemePosts.scss
+++ b/src/components/Dialog/SelectThemePosts.scss
@@ -14,8 +14,9 @@
     border-radius: 12px;
     padding-block: 4px;
     padding: 1rem;
-    // background-color: #eee;
     background-color: #FFFFFF;
+    top: 120%;
+    position: absolute;
   }
   
   &__button {
