--- a/src/components/Dialog/SelectThemePosts.scss
+++ b/src/components/Dialog/SelectThemePosts.scss
@@ -13,11 +13,11 @@
     border: 1px solid #fcfcfc;
     border-radius: 12px;
     padding-block: 4px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     top: 120%;
     position: relative;
   }
-  
+
   &__button {
     color: #1976d2;
     outline: none;
@@ -25,7 +25,7 @@
     border: 1px solid #1976d2;
     padding-inline: 12px;
     padding-block: 4px;
-    border-radius: 12px
+    border-radius: 12px;
   }
 }
 
@@ -35,13 +35,15 @@
   position: relative;
 }
 
-.dropdown__item select, input {
+.dropdown__item select,
+input {
   width: 100%;
   padding-block: 16.5px;
   padding-inline: 14px;
 }
 
-.dropdown__item select, input {
+.dropdown__item select,
+input {
   margin-top: 2px;
 }
 
@@ -52,13 +54,13 @@
 @media (min-width: 1200px) and (max-width: 1499px) {
   .MuiDialog-paper {
     width: 100% !important;
-    max-width: 1200px !important;
+    max-width: 1200px;
   }
 }
 
 @media (min-width: 1500px) {
   .MuiDialog-paper {
     width: 100% !important;
-    max-width: calc(100% - 100px )!important;
+    max-width: calc(100% - 100px);
   }
 }
